# graphics-programming

gltut/: CMakeLists.txt  README.md  main.cpp
gltut/glsdk/freeglut/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  libtool
gltut/glsdk/freeglut/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.2
gltut/glsdk/freeglut/doc/: Makefile  Makefile.in
gltut/glsdk/freeglut/include/: Makefile  Makefile.in
gltut/glsdk/freeglut/include/GL/: Makefile  Makefile.in
gltut/glsdk/freeglut/progs/: Makefile  Makefile.in
gltut/glsdk/freeglut/progs/demos/: Makefile  Makefile.in
gltut/glsdk/freeglut/progs/demos/CallbackMaker/: Makefile  Makefile.in
gltut/glsdk/freeglut/progs/demos/Fractals/: Makefile  Makefile.in
gltut/glsdk/freeglut/progs/demos/Fractals_random/: Makefile  Makefile.in
gltut/glsdk/freeglut/progs/demos/Lorenz/: Makefile  Makefile.in
gltut/glsdk/freeglut/progs/demos/One/: Makefile  Makefile.in
gltut/glsdk/freeglut/progs/demos/shapes/: Makefile  Makefile.in
gltut/glsdk/freeglut/progs/demos/smooth_opengl3/: Makefile  Makefile.in
gltut/glsdk/freeglut/progs/demos/spaceball/: Makefile  Makefile.in
gltut/glsdk/freeglut/src/: Makefile  Makefile.in
gltut/tut01/: notes.md  tut1.cpp
gltut/tut02/: FragPosition.cpp  VertexColors.cpp  tut02_notes.md
gltut/tut02/data/: FragPosition.frag  VertexColors.frag
gltut/tut03/: FragChangeColor.cpp  VertCalcOffset.cpp  tut03_notes.md
gltut/tut03/data/: calcColor.frag
gltut/tut04/: AspectRatio.cpp  MatrixPerspective.cpp  tut04_notes.md
gltut/tut06/: Hierarchy_custom.cpp  Translation.cpp  tut06_notes
